        changed. For now, there are no breaking changes in the public
        interface due to the presence of now deprecated aliases. I’ll
        remove these in 1.5.0. DOCUMENTATION
    -   POD reflects some of the mentioned name changes.
    -   New features documented.
-   TESTS
    -   Some tests updated to reflect mentioned name changes.
-   TEST COVERAGE

    ---------------------------- ------ ------ ------ ------ ------ ------ ------
    File                           stmt   bran   cond    sub    pod   time  total
    ---------------------------- ------ ------ ------ ------ ------ ------ ------
    blib/lib/DBIx/Squirrel.pm      85.0   44.1   55.5  100.0    n/a   39.5   78.8
    ...DBIx/Squirrel/Iterator.pm   69.9   40.3   73.9   72.0    0.0    7.6   58.6
    ...x/Squirrel/ResultClass.pm   65.8   23.5    n/a   81.8    0.0    0.7   56.3
    ...BIx/Squirrel/ResultSet.pm   67.0   20.0    n/a   81.8    0.0    1.4   61.1
    ...ib/DBIx/Squirrel/Utils.pm   97.7  100.0  100.0   91.6    0.0    7.0   92.6
    blib/lib/DBIx/Squirrel/db.pm   66.6   46.8   33.3   90.4    0.0    0.6   61.3
    blib/lib/DBIx/Squirrel/dr.pm   84.2   50.0   33.3   90.0    0.0   39.9   67.5
    blib/lib/DBIx/Squirrel/st.pm   69.5   50.0   22.2   96.0    0.0    3.0   63.3
    Total                          72.5   43.7   55.0   84.4    0.0  100.0   64.0
    ---------------------------- ------ ------ ------ ------ ------ ------ ------

1.4.0 2024-08-27 21:00

-   BREAKING CHANGES
    -   Packages not subclassing DBI packages have now been renamed. The
        names are longer than the uninformative two-character names
        originlly given.
    -   Many routines housed under the Utils namespace have now been
        moved to namespaces that are more suitable.
-   REFACTOR / FIX
    -   A lot of older code refactored to make it more efficient, more
        clear, or more robust. I’m hoping this positively affects
        outcomes on a small number of CPANTs builds still having issues.